[tool.poetry]
name = "hermes"
version = "0.1.0"
description = "A package to simulate multi agent systems"
authors = ["Devanshusisodiya <devanshukumar45@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^24.2.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
isort = "^5.13.2"
pylint = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
